add test period notification to terms and privacy pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -90,6 +90,8 @@
   </mat-sidenav>
 
   <mat-sidenav-content class="sidenav-content">
+    <!-- AICI ESTE LOCUL CORECT PENTRU BANNER -->
+    <app-test-mode-banner></app-test-mode-banner>
     <app-header [drawer]="drawer"></app-header>
 
     <main class="main-content">
